# multimedia_av_codec

./: .clang-format  .gitignore  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  config.gni  gn  hisysevent.yaml
interfaces/inner_api/native/: BUILD.gn  av_base.h  av_common.h  avcodec.h  avcodec_audio_channel_layout.h  avcodec_audio_codec_key.h  avcodec_audio_common.h  avcodec_audio_decoder.h  avcodec_audio_encoder.h  avcodec_base.h  avcodec_codec_key.h  avcodec_codec_name.h  avcodec_common.h  avcodec_errors.h  avcodec_info.h  avcodec_list.h  avcodec_mime_type.h  avcodec_video_decoder.h  avcodec_video_encoder.h  avdemuxer.h  avmuxer.h  avsharedmemory.h  avsource.h  format.h  media_description.h
interfaces/kits/c/: BUILD.gn  avcodec_audio_channel_layout.h  native_avbase.h  native_avcapability.h  native_avcapablility.h  native_avcodec_audiodecoder.h  native_avcodec_audioencoder.h  native_avcodec_base.h  native_avcodec_codec.h  native_avcodec_codeclist.h  native_avcodec_demuxer.h  native_avcodec_list.h  native_avcodec_videodecoder.h  native_avcodec_videoencoder.h  native_avdemuxer.h  native_averrors.h  native_avformat.h  native_avmemory.h  native_avmuxer.h  native_avsource.h
interfaces/kits/c/audio_decoder/: BUILD.gn  libnative_media_adec.ndk.json
interfaces/kits/c/audio_encoder/: BUILD.gn  libnative_media_aenc.ndk.json
interfaces/kits/c/avdemuxer/: BUILD.gn  libnative_av_codec_avdemuxer.ndk.json
interfaces/kits/c/avformat/: BUILD.gn  libnative_media_avformat.ndk.json
interfaces/kits/c/avmuxer/: BUILD.gn  libnative_av_codec_avmuxer.ndk.json  libnative_media_avmuxer.ndk.json
interfaces/kits/c/avsource/: BUILD.gn  libnative_media_avsource.ndk.json
interfaces/kits/c/codec_base/: BUILD.gn  libnative_media_codecbase.ndk.json
interfaces/kits/c/core/: BUILD.gn  libnative_media_core.ndk.json
interfaces/kits/c/video_decoder/: BUILD.gn  libnative_media_vdec.ndk.json
interfaces/kits/c/video_encoder/: BUILD.gn  libnative_media_venc.ndk.json
services/dfx/: BUILD.gn  avcodec_bitstream_dump.cpp  avcodec_dfx.cpp  avcodec_dump_utils.cpp  avcodec_log_dump.cpp  avcodec_xcollie.cpp
services/dfx/include/: avcodec_bitstream_dump.h  avcodec_dfx.h  avcodec_dump_utils.h  avcodec_log.h  avcodec_log_dump.h  avcodec_xcollie.cpp  avcodec_xcollie.h
services/engine/avcodeclist/: BUILD.gn  avcodec_ability_singleton.cpp  avcodec_ability_singleton.h  avcodeclist_core.cpp  avcodeclist_core.h
services/engine/base/: BUILD.gn  codecbase.cpp
services/engine/base/include/: avsourcebase.h  codecbase.h  codeclistbase.h  sourcebase.h
services/engine/codec/audio/: BUILD.gn  audio_buffer_info.cpp  audio_buffers_manager.cpp  audio_codec_adapter.cpp  audio_codec_worker.cpp  (+1 more)
services/engine/codeclist/: BUILD.gn  audio_codeclist_info.cpp  audio_codeclist_info.h  codec_ability_singleton.cpp  codec_ability_singleton.h  codeclist_builder.cpp  codeclist_builder.h  codeclist_core.cpp  codeclist_core.h  codeclist_utils.h  codeclist_xml_parser.cpp  codeclist_xml_parser.h
services/engine/common/: BUILD.gn  codec_utils.cpp  ffmpeg_converter.cpp  ffmpeg_utils.cpp  plugin_buffer.cpp  share_memory.cpp  surface_allocator.cpp  surface_memory.cpp
services/engine/plugin/: BUILD.gn
services/services/: BUILD.gn
services/services/common/: avsharedmemory_ipc.cpp  avsharedmemory_ipc.h
services/services/factory/: i_demuxer_engine.h  i_muxer_engine.h  i_source_engine.h
services/utils/: BUILD.gn  av_log.h  avdatasrcmemory.cpp  avsharedmemorybase.cpp  avsharedmemorypool.cpp  format.cpp  task_thread.cpp
services/utils/include/: avdatasrcmemory.h  avsharedmemorybase.h  avsharedmemorypool.h  block_queue.h  scope_guard.h  task_thread.h  utils.h
test/: BUILD.gn
test/moduletest/resources/: ohos_test.xml
test/nativedemo/: BUILD.gn  av_codec_demo.cpp
test/nativedemo/audio_demo/: avcodec_audio_aac_encoder_demo.cpp  avcodec_audio_aac_encoder_demo.h  avcodec_audio_decoder_demo.cpp  avcodec_audio_decoder_demo.h  avcodec_audio_decoder_inner_demo.cpp  avcodec_audio_decoder_inner_demo.h  avcodec_audio_encoder_demo.cpp  avcodec_audio_encoder_demo.h  avcodec_audio_encoder_inner_demo.cpp  avcodec_audio_encoder_inner_demo.h  avcodec_audio_flac_encoder_demo.cpp  avcodec_audio_flac_encoder_demo.h
test/nativedemo/avdemuxer/: avdemuxer_demo_runner.cpp  avdemuxer_demo_runner.h
test/nativedemo/avmuxer/: avmuxer_demo.cpp  avmuxer_demo.h  avmuxer_demo_base.cpp  avmuxer_demo_base.h  avmuxer_demo_common.c  avmuxer_demo_common.h  avmuxer_demo_runner.cpp  avmuxer_demo_runner.h  avmuxer_engine_demo.cpp  avmuxer_engine_demo.h  avmuxer_ffmpeg_demo.cpp  avmuxer_ffmpeg_demo.h  native_avmuxer_demo.c  native_avmuxer_demo.h
test/nativedemo/codeclist_demo/: codeclist_demo.cpp  codeclist_demo.h
test/nativedemo/include/: demo_log.h
test/nativedemo/video_demo/: avcodec_video_decoder_demo.cpp  avcodec_video_decoder_demo.h  avcodec_video_decoder_inner_demo.cpp  avcodec_video_decoder_inner_demo.h  videodec_ffmpeg_demo.cpp  videodec_ffmpeg_demo.h
test/unittest/: BUILD.gn  format_unit_test.cpp  ohos_test.xml
test/unittest/audio_test/: audio_decoder_ability_unit_test.cpp  audio_decoder_capi_unit_test.cpp  audio_decoder_codecbase_unit_test.cpp  audio_decoder_inner_unit_test.cpp  audio_decoder_unit_test.cpp  audio_encoder_capi_unit_test.cpp
test/unittest/avcodec_test/: BUILD.gn  avcodec_mock.h  enum_mock.h
test/unittest/avmuxer_test/: BUILD.gn  avmuxer_mock.h  avmuxer_sample.cpp  avmuxer_sample.h  avmuxer_unit_test.cpp  avmuxer_unit_test.h  avmuxer_unittest.cpp
test/unittest/codeclist_test/: BUILD.gn  caps_unit_test.cpp  caps_unit_test.h  codeclist_mock.h  codeclist_unit_test.cpp  codeclist_unit_test.h
test/unittest/common/: unittest_log.h
test/unittest/format_test/: BUILD.gn  avformat_mock.h  avformat_unit_test.cpp  avformat_unit_test.h
test/unittest/hcodec_test/: BUILD.gn
test/unittest/resources/: ohos_test.xml
test/unittest/vcodec_test/: BUILD.gn  vcodec_mock.h  videodec_unit_test.cpp  videodec_unit_test.h
test/unittest/video_test/: fcodec_unit_test.cpp  video_decoder_capi_unit_test.cpp
(+492 files in other folders)
