# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

group("av_codec_demo_test") {
  testonly = true
  deps = []
  if (multimedia_av_codec_support_test) {
    deps += [ "nativedemo:av_codec_demo" ]
  }
}

group("av_codec_unit_test") {
  testonly = true
  deps = []
  if (multimedia_av_codec_support_test) {
    deps += [
      "unittest:av_audio_capi_unit_test",
      "unittest:av_audio_codecbase_unit_test",
      "unittest:av_audio_encoder_capi_unit_test",
      "unittest:av_audio_inner_unit_test",
      "unittest:av_video_unit_test",
      "unittest/avmuxer_test:avmuxer_capi_unit_test",
      "unittest/avmuxer_test:avmuxer_inner_unit_test",
      "unittest/codeclist_test:codeclist_capi_unit_test",
      "unittest/codeclist_test:codeclist_inner_unit_test",
      "unittest/format_test:avformat_capi_unit_test",
      "unittest/format_test:avformat_inner_unit_test",
      "unittest/vcodec_test:videodec_capi_unit_test",
      "unittest/vcodec_test:videodec_inner_unit_test",
    ]
    if (multimedia_av_codec_support_hcodec) {
      deps += [ "unittest/hcodec_test:hcodec_unit_test" ]
    }
  }
}

group("av_codec_module_test") {
  testonly = true
  deps = []
  if (multimedia_av_codec_support_test) {
    deps += [
      "moduletest/vcodec/swdecoder:swdecoder_native_module_test",
      #"moduletest/demuxer:demuxer_native_module_test",
    ]
  }
}
