# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_static_library("av_codec_format") {
  sources = [ "format.cpp" ]

  include_dirs = [
    "//foundation/multimedia/av_codec/interfaces/inner_api/native",
    "//foundation/multimedia/av_codec/services/utils/include",
    "//commonlibrary/c_utils/base/include",
  ]

  defines = []
  defines += av_codec_defines
  deps = [ "//foundation/multimedia/av_codec/services/utils:av_codec_service_utils" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_av_codec"
}

config("av_codec_service_utils_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("av_codec_service_utils") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "avdatasrcmemory.cpp",
    "avsharedmemorybase.cpp",
    "avsharedmemorypool.cpp"
  ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/av_codec/interfaces/inner_api/native"
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  configs = [ ":av_codec_service_utils_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_av_codec"
}
